tests/trybuild/entity/comma_alone.rs
use brood::entity;

fn main() {
    let entity = entity!(,);
}
